--- a/pdfmaker/css/torDOTcom/novel.css
+++ b/pdfmaker/css/torDOTcom/novel.css
@@ -769,6 +769,7 @@ section[data-type="titlepage"] + section[data-type="chapter"],
 section[data-type="halftitlepage"] + section[data-type="chapter"],
 section[data-type="copyright-page"] + section[data-type="chapter"],
 section[data-type="dedication"] + section[data-type="chapter"],
+section[data-type="acknowledgments"] + section[data-type="chapter"],
 nav[data-type="toc"] + section[data-type="chapter"],
 div[data-type="part"] + section[data-type="chapter"] {
   page-break-before: right; }
@@ -1069,7 +1070,7 @@ section[data-type="dedication"] p:first-child {
 section[data-type="dedication"] blockquote[data-type="epigraph"],
 section[data-type="preface"].epigraph,
 .Dedicationded + p[class*="Epigraph"] {
-  page-break-before: always;
+  page-break-before: right;
   margin-top: 31pt; }
 
 p[class*="EpigraphSource"] + p[class*="Epigraph-non-verse"],
@@ -1444,20 +1445,18 @@ img {
   prince-image-resolution: auto, 300dpi;
   text-align: center; }
 
-section[data-type="appendix"] h1 + figure, .abouttheauthor h1 + figure {
+section[data-type="appendix"].abouttheauthor h1 + figure, .abouttheauthor h1 + figure {
   margin-top: -31pt;
   margin-bottom: 27pt;
   max-height: 2in; }
 
-section[data-type="appendix"] h1 + figure img, .abouttheauthor figure img {
+section[data-type="appendix"].abouttheauthor h1 + figure img, .abouttheauthor figure img {
   max-height: 2in; }
 
 img[src*="fullpage"] {
   display: block;
   width: 5.25in;
-  max-width: none;
   height: 8.25in;
-  max-height: none;
   margin-top: -1.65in; }
 
 *[class*="TeaserOpeningTexttotx"], *[class*="TeaserOpeningTextNo-Indenttotx1"] {
@@ -1558,7 +1557,7 @@ p.PageBreakpb + div.runfoot + div.runheadright + div.runheadleft + * {
 /* glossary definition */
 .Definitiondef {
   font-size: 10.5pt;
-  line-height: 13.8510638298pt;
+  line-height: 13.85106pt;
   text-indent: -24pt;
   margin: 0;
   margin-left: 24pt;
